some links fixed, increased spacing on menu items

--- a/src/components/MobileNavBar/mobile-navbar.css
+++ b/src/components/MobileNavBar/mobile-navbar.css
@@ -7,9 +7,8 @@
   background-color: #0b0815; /* Background color for visibility */
   color: #efecf8;
   z-index: 1000; /* Ensure it is above other content */
-    
 
-.icon-link {
+  .icon-link {
     display: flex;
     /* Ensure icons are centered */
     justify-content: center;
@@ -19,51 +18,39 @@
     height: 100%;
     /* Ensure they fill the navbar height */
   }
-
-.menu-link {
-  display: flex;
-  /* Ensure the SVG is centered */
-  justify-content: center;
-  /* Center the icon */
-  align-items: center;
-  /* Center the icon vertically */
-  height: 100%;
-  /* Make it fill the height of the navbar */
-}
-
-.some-links {
-  opacity: 0.6;
-  text-align: right;
-}
-.some-links-link {
-  width: 1px;
-  opacity: 0;
-  margin-block: auto;
-}
-.some-links-wrapper {
-  width: 100%;  
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: end;
-  opacity: 0.6;
-
-
-}
-
-.menu-button:hover {
-  background-color: #551a3a; /* Change background on hover */
+  .menu-link {
+    display: flex;
+    /* Ensure the SVG is centered */
+    justify-content: center;
+    /* Center the icon */
+    align-items: center;
+    /* Center the icon vertically */
+    height: 100%;
+    /* Make it fill the height of the navbar */
+  }
+  .menu-button:hover {
+    background-color: #551a3a; /* Change background on hover */
+  }
+  /* Hides navbar when screen size is bigger than 767px */
+  @media only screen and (min-width: 768px) {
+    display: none;
+    /* Hide on larger screens */
+  }
 }
 
 
-    /* Hides navbar when screen size is bigger than 767px */
-    @media only screen and (min-width: 768px) {
-      display: none;
-      /* Hide on larger screens */
-    }
-    }
 
+/* ------ Offcanvas menu & some-links --------  */
 
+/* Icon transitions */
+.facebook-icon, .x-icon, .mail-icon, .phone-icon, .instagram-icon, .messenger-icon {
+  transition: all 0.4s ease-in-out;
+}
 
-
-
+.some-link {
+  opacity: 0.5;
+  &:hover {
+    opacity: 1;
+    transform: scale(105%) translateX(5%);
+  }
+}
